# Poseidon

./: .env  .env.txt  .flake8  .gitignore  .gitignore.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci_cd_render.yml  lint.yml  process-tcx.yml  process-tcx.yml.txt
data/: 17361336.tcx  17364629.tcx  17368714.tcx  17380235.tcx  17388990.tcx  17419282.tcx  17432214.tcx  17482555.tcx  17493893.tcx  17514938.tcx  17520861.tcx  17521956.tcx  17525896.tcx  17539018.tcx  17578430.tcx  17609659.tcx  17646030.tcx  17657815.tcx  17678655.tcx  17691746.tcx  17729968.tcx  17741323.tcx  parser.py
src/dashboard/: app.py
src/db/: models.py
src/ingest/: parser.py  parser_merged.py
src/poseidon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/processing/: analysis.py
test/: conftest.py  test_analysis.py  test_regression.py  test_segments.py
tests/: conftest.py  test_analysis.py  test_parser.py  test_regression.py  test_segments.py
