[project]
name = "poseidon"
version = "0.1.0"
authors = [{name="Kortazo"}]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "poseidon"
src_paths = ["src"]
