[project]
name = "poseidon"
version = "0.1.0"
authors = [{ name = "Kortazo" }]
dependencies = [
  "pandas==2.1.2",
  "numpy==1.26.1",
  "matplotlib==3.8.0",
  "streamlit==1.26.0",
  "scikit-learn==1.3.0",
  "sqlalchemy==2.0.22",
  "psycopg2-binary==2.9.7",
  "python-dotenv==1.0.0",
  "xmltodict==0.13.0",
  "fastapi==0.101.0",
  "uvicorn==0.23.0",
  "supabase==1.0.0",
  "plotly==5.15.0",
  "fpdf==1.7.2",
  "kaleido==0.2.1",
  "black==23.9.1",
  "isort==5.13.2",
  "flake8==6.1.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["poseidon"]
src_paths = ["src"]
