[metadata]
name = poseidon
version = 0.1.0

[options]
packages = find:
install_requires =
    pandas==2.1.2
    numpy==1.26.1
    matplotlib==3.8.0
    streamlit==1.26.0
    scikit-learn==1.3.0
    sqlalchemy==2.0.22
    psycopg2-binary==2.9.7
    python-dotenv==1.0.0
    xmltodict==0.13.0
    fastapi==0.101.0
    uvicorn==0.23.0
    supabase==1.0.0

[options.packages.find]
where = src
